Publish of Github pages from Gradle.

--- a/2.0.0-RC4/index.html
+++ b/2.0.0-RC4/index.html
@@ -516,7 +516,7 @@ table.CodeRay td.code>pre{padding:0}
 <div class="details">
 <span id="author" class="author">Daniel Dietrich, Robert Winkler</span><br>
 <span id="revnumber">version 2.0.0-RC4,</span>
-<span id="revdate">2016-02-08</span>
+<span id="revdate">2016-02-14</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -1174,7 +1174,7 @@ Tuple2&lt;<span class="predefined-type">Integer</span>, <span class="predefined-
         <span class="tag">&lt;/activation&gt;</span>
         <span class="tag">&lt;repositories&gt;</span>
             <span class="tag">&lt;repository&gt;</span>
-                snapshots-repo
+                <span class="tag">&lt;id&gt;</span>snapshots-repo<span class="tag">&lt;/id&gt;</span>
                 <span class="tag">&lt;url&gt;</span>https://oss.sonatype.org/content/repositories/snapshots<span class="tag">&lt;/url&gt;</span>
                 <span class="tag">&lt;releases&gt;</span>
                     <span class="tag">&lt;enabled&gt;</span>false<span class="tag">&lt;/enabled&gt;</span>
