--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@ table.CodeRay td.code>pre{padding:0}
 <h2 id="_introduction">1. Introduction</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Javaslang is a functional library for Java 8+ that provides persistent data types and functional control structures. Because Javaslang does not depend on any libraries (other than the JVM) you can easily add it as standalone .jar to your classpath.</p>
+<p>Javaslang is a functional library for Java 8+ that provides persistent data types and functional control structures.</p>
 </div>
 <div class="sect2">
 <h3 id="_functional_data_structures_in_java_8_with_javaslang">1.1. Functional Data Structures in Java 8 with Javaslang</h3>
