--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ table.CodeRay td.code>pre{padding:0}
 <div class="details">
 <span id="author" class="author">Daniel Dietrich, Robert Winkler</span><br>
 <span id="revnumber">version 2.0.0-RC4,</span>
-<span id="revdate">2016-02-16</span>
+<span id="revdate">2016-02-17</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -740,7 +740,7 @@ The key to a better Java is to use <em>immutable values</em> paired with <em>ref
 </div>
 </div>
 <div class="paragraph">
-<p>Today I comprehend a <em>void</em> return type as a smell. It is evidence thathttps://en.wikipedia.org/wiki/Side_effect_(computer_science)[side-effects] take place, state is mutated. <em>Shared</em> mutable state is an important source of failure, not only in a concurrent setting.</p>
+<p>Today I comprehend a <em>void</em> return type as a smell. It is evidence that <a href="https://en.wikipedia.org/wiki/Side_effect_(computer_science)">side-effects</a> take place, state is mutated. <em>Shared</em> mutable state is an important source of failure, not only in a concurrent setting.</p>
 </div>
 </div>
 <div class="sect3">
