Publish of Github pages from Gradle.

--- a/index.html
+++ b/index.html
@@ -1775,7 +1775,7 @@ Property.def(<span class="string"><span class="delimiter">&quot;</span><span cla
 <div class="ulist">
 <ul>
 <li>
-<p>object deconstruction <code>case Some(1) &#8658; "one"</code></p>
+<p>object deconstruction <code>case Some(i) &#8658; i</code></p>
 </li>
 <li>
 <p>named parameters <code>case i: Int &#8658; "Int " + i</code></p>
@@ -2116,7 +2116,7 @@ limitations under the License.</p>
 <div id="footer">
 <div id="footer-text">
 Version 2.0.1<br>
-Last updated 2016-03-22 10:11:41 MEZ
+Last updated 2016-03-22 12:17:49 +01:00
 </div>
 </div>
 </body>
