Publish of Github pages from Gradle.

--- a/index.html
+++ b/index.html
@@ -1787,10 +1787,12 @@ Property.def(<span class="string"><span class="delimiter">&quot;</span><span cla
 <p>multiple conditions <code>case "-h" | "--help" &#8658; displayHelp</code></p>
 </li>
 <li>
-<p>compile-time checks for exhaustiveness<br>
-Pattern matching is a great feature that saves us from writing stacks of if-then-else branches. It reduces the amount of code while focusing on the relevant parts.</p>
+<p>compile-time checks for exhaustiveness</p>
 </li>
 </ul>
+</div>
+<div class="paragraph">
+<p>Pattern matching is a great feature that saves us from writing stacks of if-then-else branches. It reduces the amount of code while focusing on the relevant parts.</p>
 </div>
 <div class="sect3">
 <h4 id="_the_basics_of_match_for_java">2.6.1. The Basics of Match for Java</h4>
@@ -1814,10 +1816,12 @@ Pattern matching is a great feature that saves us from writing stacks of if-then
 <p><code>$(value)</code> - equals pattern</p>
 </li>
 <li>
-<p><code>$(predicate)</code> - conditional pattern<br>
-in scope, the initial Scala example can be expressed like this:</p>
+<p><code>$(predicate)</code> - conditional pattern</p>
 </li>
 </ul>
+</div>
+<div class="paragraph">
+<p>in scope, the initial Scala example can be expressed like this:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -2075,10 +2079,12 @@ in scope, the initial Scala example can be expressed like this:</p>
 <p><code>isNotNull</code> resp. <code>nonNull</code></p>
 </li>
 <li>
-<p>etc.<br>
-The patterns could have a guard-method 'If' (modulo naming) that is able to check a condition that involves all decomposed values:</p>
+<p>etc.</p>
 </li>
 </ul>
+</div>
+<div class="paragraph">
+<p>The patterns could have a guard-method 'If' (modulo naming) that is able to check a condition that involves all decomposed values:</p>
 </div>
 <div class="listingblock">
 <div class="content">
