Publish of Github pages from Gradle.

--- a/index.html
+++ b/index.html
@@ -1567,7 +1567,7 @@ lazy.get();         <span class="comment">// = 0.123 (memoized)</span>
 </div>
 <div class="paragraph">
 <p>If the result of compute() is Right(1), the value is Right(2).<br>
-If the result of compute() is Left("error), the value is Left("error").</p>
+If the result of compute() is Left("error"), the value is Left("error").</p>
 </div>
 </div>
 <div class="sect3">
