Publish of Github pages from Gradle.

--- a/index.html
+++ b/index.html
@@ -515,8 +515,8 @@ table.CodeRay td.code>pre{padding:0}
 <h1>Javaslang User Guide</h1>
 <div class="details">
 <span id="author" class="author">Daniel Dietrich, Robert Winkler</span><br>
-<span id="revnumber">version 2.0.1,</span>
-<span id="revdate">2016-05-26</span>
+<span id="revnumber">version 2.0.2,</span>
+<span id="revdate">2016-07-09</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -1129,14 +1129,14 @@ Tuple2&lt;<span class="predefined-type">Integer</span>, <span class="predefined-
 <p>Projects that include Javaslang need to target Java 1.8 at minimum.</p>
 </div>
 <div class="paragraph">
-<p>The .jar is available at <a href="http://search.maven.org/#search%7Cga%7C1%7Ca:%22javaslang%22">Maven Central</a>.</p>
+<p>The .jar is available at <a href="http://search.maven.org/#search%7Cga%7C1%7Ca%3A%22javaslang%22%20g%3A%22io.javaslang%22">Maven Central</a>.</p>
 </div>
 <div class="sect2">
 <h3 id="_gradle">2.1. Gradle</h3>
 <div class="listingblock">
 <div class="content">
 <pre class="CodeRay highlight"><code data-lang="groovy">dependencies {
-    compile "io.javaslang:javaslang:2.0.1"
+    compile "io.javaslang:javaslang:2.0.2"
 }</code></pre>
 </div>
 </div>
@@ -1149,7 +1149,7 @@ Tuple2&lt;<span class="predefined-type">Integer</span>, <span class="predefined-
     <span class="tag">&lt;dependency&gt;</span>
         <span class="tag">&lt;groupId&gt;</span>io.javaslang<span class="tag">&lt;/groupId&gt;</span>
         <span class="tag">&lt;artifactId&gt;</span>javaslang<span class="tag">&lt;/artifactId&gt;</span>
-        <span class="tag">&lt;version&gt;</span>2.0.1<span class="tag">&lt;/version&gt;</span>
+        <span class="tag">&lt;version&gt;</span>2.0.2<span class="tag">&lt;/version&gt;</span>
     <span class="tag">&lt;/dependency&gt;</span>
 <span class="tag">&lt;/dependencies&gt;</span></code></pre>
 </div>
@@ -1164,7 +1164,7 @@ Tuple2&lt;<span class="predefined-type">Integer</span>, <span class="predefined-
 <div class="sect2">
 <h3 id="_snapshots">2.4. Snapshots</h3>
 <div class="paragraph">
-<p>Developer versions can be found <a href="https://oss.sonatype.org/content/repositories/snapshots/com/javaslang/javaslang">here</a>.</p>
+<p>Developer versions can be found <a href="https://oss.sonatype.org/content/repositories/snapshots/io/javaslang/javaslang">here</a>.</p>
 </div>
 <div class="sect3">
 <h4 id="_gradle_2">2.4.1. Gradle</h4>
@@ -2164,7 +2164,7 @@ limitations under the License.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Version 2.0.1<br>
+Version 2.0.2<br>
 Last updated 2016-03-22 12:17:49 +01:00
 </div>
 </div>
