Publish of Github pages from Gradle.

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ table.CodeRay td.code>pre{padding:0}
 <div class="details">
 <span id="author" class="author">Daniel Dietrich, Robert Winkler</span><br>
 <span id="revnumber">version 2.0.2,</span>
-<span id="revdate">2016-07-09</span>
+<span id="revdate">2016-07-15</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -2142,7 +2142,7 @@ Case(isIn(<span class="string"><span class="delimiter">&quot;</span><span class=
 <h2 id="_license">4. License</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Copyright 2014-2015 Daniel Dietrich</p>
+<p>Copyright 2014-2016 Javaslang, <a href="http://javaslang.io" class="bare">http://javaslang.io</a></p>
 </div>
 <div class="paragraph">
 <p>Licensed under the Apache License, Version 2.0 (the "License");<br>
