--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ table.CodeRay td.code>pre{padding:0}
 <div class="details">
 <span id="author" class="author">Daniel Dietrich, Robert Winkler</span><br>
 <span id="revnumber">version 2.0.2,</span>
-<span id="revdate">2016-08-20</span>
+<span id="revdate">2016-09-30</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -1570,7 +1570,7 @@ lazy.get();         <span class="comment">// = 0.123 (memoized)</span></code></p
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="CodeRay highlight"><code data-lang="java"><span class="predefined-type">CharSequence</span> chars = Lazy.of(() -&gt; <span class="string"><span class="delimiter">&quot;</span><span class="content">Yay!</span><span class="delimiter">&quot;</span></span>, <span class="predefined-type">CharSequence</span>.class);</code></pre>
+<pre class="CodeRay highlight"><code data-lang="java"><span class="predefined-type">CharSequence</span> chars = Lazy.val(() -&gt; <span class="string"><span class="delimiter">&quot;</span><span class="content">Yay!</span><span class="delimiter">&quot;</span></span>, <span class="predefined-type">CharSequence</span>.class);</code></pre>
 </div>
 </div>
 </div>
