--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ table.CodeRay td.code>pre{padding:0}
 <div class="details">
 <span id="author" class="author">Daniel Dietrich, Robert Winkler</span><br>
 <span id="revnumber">version 2.0.4,</span>
-<span id="revdate">2016-10-03</span>
+<span id="revdate">2016-10-14</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -671,13 +671,13 @@ Try&lt;<span class="predefined-type">Integer</span>&gt; divide(<span class="pred
 </div>
 </div>
 <div class="paragraph">
-<p>This version of divide does not throw any more. We made the possible failure explicit by using the type Try.</p>
+<p>This version of divide does not throw any exception anymore. We made the possible failure explicit by using the type Try.</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_referential_transparency">1.2.2. Referential Transparency</h4>
 <div class="paragraph">
-<p>A function, or more general an expression, is called <a href="https://en.wikipedia.org/wiki/Referential_transparency">referential transparent</a> if a call can be replaced by its value without affecting the behavior of the program. Simply spoken, given the same input the output is always the same.</p>
+<p>A function, or more generally an expression, is called <a href="https://en.wikipedia.org/wiki/Referential_transparency">referential transparent</a> if a call can be replaced by its value without affecting the behavior of the program. Simply spoken, given the same input the output is always the same.</p>
 </div>
 <div class="listingblock">
 <div class="content">
